# aeon-trespass-expert-2

./: .coverage  .editorconfig  .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-write-lint.sh  pre-branch-check.sh  pre-commit-check.sh  pre-push-check.sh
.claude/prompts/: review.md
.claude/rules/: contracts.md  linear.md  pipeline.md  reader.md
.claude/skills/autopilot/: skill.md
.claude/skills/autopilot/data/: config.json
.claude/skills/babysit-prs/: skill.md
.claude/skills/babysit-prs/data/: .gitignore
.claude/skills/health/: skill.md
.claude/skills/run-pipeline/: gotchas.md  skill.md
.claude/skills/run-pipeline/scripts/: check-output.sh
.claude/skills/verify-reader/: gotchas.md  skill.md
.claude/skills/verify-reader/scripts/: assert-pages.mjs  verify.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  preview.yml  release.yml
apps/reader/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/reader/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
apps/reader/components/: AppShell.tsx  BlockRenderer.tsx  DocLayout.tsx  DocSidebar.tsx  DocTitle.tsx  FigureLightbox.tsx  GlossaryDrawer.tsx  GlossaryTermList.tsx  InlineRenderer.tsx  LocaleSwitcher.tsx  PageNav.tsx  PageView.tsx  RouteErrorBoundary.tsx  SearchDialog.tsx  SymbolInline.tsx  TocTree.tsx
apps/reader/e2e/: extraction-review.spec.ts  smoke.spec.ts  visual.spec.ts
apps/reader/lib/: a11y.ts  assertNever.ts  bundle.ts  locale.tsx  pagefind.ts  routes.ts  seo.tsx
apps/reader/styles/: globals.css  theme.css
apps/reader/tests/: BlockRenderer.test.tsx  GlossaryDrawer.test.tsx  InlineRenderer.test.tsx  SearchDialog.test.tsx  a11y.test.tsx  bundle.test.ts  fixtureSchema.test.ts  locale.test.tsx  pagefind.test.ts  routes.test.ts  seo.test.ts
artifacts/: .gitignore
configs/: catalog.yaml
configs/documents/: aeon-trespass-core.yaml  aeon-trespass-odyssey.yaml
configs/glossary-packs/: aeon-core.yaml
configs/model-profiles/: translate-default.yaml
configs/overrides/: aeon-trespass-core.yaml
configs/rule-profiles/: rulebook-default.yaml
configs/symbol-packs/: aeon-core.yaml
docs/: JAMON_AGENTIC_WORKFLOW.md  PIPELINE_STAGES.md  PROJECT_ARCHITECTURE.md  PROJECT_ARCHITECTURE_TO_AGENTIC.md
docs/adr/: 001-contract-scope-and-direction.md  002-architecture-deviations.md
docs/architecture/: ARCH3_AGENT_RULES.md  ARCH3_EXECUTION_PLAYBOOK.md  ARCH3_FIXTURE_CATALOG.md  FIXTURE_CATALOG.md
docs/operator-guides/: dev-release-loop.md
prompts/translate/v1/: input_example.json  response_schema.json  system.j2
scripts/: gen_contracts.py  run-issues.sh  screenshot.mjs  sync_generated_bundle.py  test-run-issues.sh
tests/backend/: builders.py  conftest.py  evidence_helpers.py  test_apply_safe_fixes.py  test_architecture_compare.py  test_artifact_store.py  test_asset_registry.py  test_asset_resolution.py  test_build_reader.py  test_cache_keys.py  test_cache_semantics.py  test_cli.py  test_confidence.py  test_config_loader.py  test_cost_estimation.py  test_cross_artifact_invariants.py  test_enrich_content.py  test_error_collector.py  test_evaluate_qa.py  test_evidence_builder.py  test_evidence_goldens.py  test_evidence_models.py  test_evidence_stages.py  test_export_site_bundle.py  test_extract_assets.py  test_extract_goldens.py  test_extract_primitives.py  test_extraction_entity_qa_rules.py  test_figure_caption_linking.py  test_fixture_bundle_validation.py  test_full_pipeline.py  test_furniture_detection.py  test_gemini_cli.py  test_gemini_retry.py  test_gen_contracts.py  test_geometry.py  test_glossary_annotations.py  test_hard_page_e2e.py  test_hashing.py  test_ids.py  (+36 more)
tests/fixtures/site-bundles/: catalog.json
tests/fixtures/site-bundles/aeon-trespass-core/: bundle_manifest.json  navigation.json  (+1 more)
tests/fixtures/symbol_eval/: decorative_assets.json  dense_mixed_icons.json  inline_stat_icons.json
(+61 files in other folders)
