[project]
name = "aeon-trespass-expert"
version = "0.1.0"
description = "Content compiler and static reader for Aeon Trespass rulebooks"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "types-PyYAML",
    "aeon-reader-pipeline",
    "import-linter>=2.0,<3",
]

[tool.uv.workspace]
members = ["packages/pipeline"]

[tool.uv.sources]
aeon-reader-pipeline = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "C901", # McCabe complexity
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["aeon_reader_pipeline"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pymupdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aeon_reader_pipeline.stages.*"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.importlinter]
root_packages = ["aeon_reader_pipeline"]

[[tool.importlinter.contracts]]
name = "Models must not import stages or CLI"
type = "forbidden"
source_modules = ["aeon_reader_pipeline.models"]
forbidden_modules = ["aeon_reader_pipeline.stages", "aeon_reader_pipeline.cli"]

[[tool.importlinter.contracts]]
name = "LLM layer must not import stages"
type = "forbidden"
source_modules = ["aeon_reader_pipeline.llm"]
forbidden_modules = ["aeon_reader_pipeline.stages", "aeon_reader_pipeline.cli"]

[[tool.importlinter.contracts]]
name = "Stage framework must not import concrete stages"
type = "forbidden"
source_modules = ["aeon_reader_pipeline.stage_framework"]
forbidden_modules = ["aeon_reader_pipeline.stages"]

[[tool.importlinter.contracts]]
name = "Utils must not import stages, LLM, or CLI"
type = "forbidden"
source_modules = ["aeon_reader_pipeline.utils"]
forbidden_modules = [
    "aeon_reader_pipeline.stages",
    "aeon_reader_pipeline.llm",
    "aeon_reader_pipeline.cli",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
